[tool.poetry]
name = "glitter-sdk"
version = "0.3.0"
description='Glitter Protocol is a blockchain based database and index engine for developing and hosting web3 applications in decentralized storage networks.'
authors = ["Glitter Protocol <ted@glitterprotocol.io>"]
readme = "README.md"
packages = [{include = "glitter_sdk"}]

[tool.poetry.dependencies]
python = "^3.8"
nest-asyncio = "^1.5.6"
aiohttp = "^3.8.4"
bech32 = "^1.2.0"
boltons = "^23.0.0"
furl = "^2.1.3"
wrapt = "^1.15.0"
bip32utils = "^0.3.post4"
mnemonic = "^0.20"
attrs = "^22.2.0"
attr = "^0.3.2"
betterproto = "2.0.0b4"
coincurve = "^18.0.0"
base58 = "^2.1.1"
pycryptodomex = "^3.17"
glitter-proto = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
